--- a/scss/gtk-3.0/_colors.scss
+++ b/scss/gtk-3.0/_colors.scss
@@ -1,20 +1,21 @@
-$surface-1: hsl(240, 3%, 4%);
-$surface-2: hsl(240, 3%, 8%);
-$surface-3: hsl(240, 3%, 12%);
-$surface-4: hsl(240, 3%, 16%);
-$surface-5: hsl(240, 3%, 20%);
+$surface-1: #131a1c;
+$surface-2: #131a1c;
+$surface-3: #21282a;
+$surface-4: #0c1315;
+$surface-5: darken($surface-4, 8%);
 
-$accent-1: hsl(0,60%,60%);
-$accent-2: hsl(25,60%,60%);
-$accent-3: hsl(55,60%,60%);
-$accent-4: hsl(145,60%,60%);
-$accent-5: hsl(185,60%,60%);
-$accent-6: hsl(240,60%,60%);
-$accent-7: hsl(265,60%,60%);
-$accent-8: hsl(300,60%,60%);
+$accent-1: #f65b5b;
+$accent-2: #e59e67;
+$accent-3: #e7ac7e;
+$accent-4: #6bb05d;
+$accent-5: #51a39f;
+$accent-6: #b185db;
+$accent-7: #c26f6f;
+$accent-8: #bb8fe5;
+$accent-9: #8dc776;
 
-$primary-accent: $accent-7;
-$secondary-accent: $accent-4;
+$primary-accent: $accent-4;
+$secondary-accent: $accent-9;
 
 $foreground-color: lighten($surface-5, 45%);
 
