--- a/scss/gtk-3.0/_colors.scss
+++ b/scss/gtk-3.0/_colors.scss
@@ -9,15 +9,15 @@ $accent-2: #e59e67;
 $accent-3: #e7ac7e;
 $accent-4: #6bb05d;
 $accent-5: #51a39f;
-$accent-6: #b185db;
-$accent-7: #c26f6f;
+$accent-6: #53a7bf;
+$accent-7: #b185db;
 $accent-8: #bb8fe5;
 $accent-9: #8dc776;
 
 $primary-accent: $accent-4;
 $secondary-accent: $accent-9;
 
-$foreground-color: lighten($surface-5, 45%);
+$foreground-color: #c5c8c9;
 
 $highlight: rgba(255,255,255,0.15);
 
