--- a/scss/gtk-3.0/_colors.scss
+++ b/scss/gtk-3.0/_colors.scss
@@ -1,8 +1,8 @@
 $surface-1: #131a1c;
 $surface-2: #131a1c;
-$surface-3: #21282a;
-$surface-4: #0c1315;
-$surface-5: darken($surface-4, 8%);
+$surface-3: #1a2123;
+$surface-4: #21282a;
+$surface-5: #0c1315;
 
 $accent-1: #f65b5b;
 $accent-2: #e59e67;
@@ -14,8 +14,8 @@ $accent-7: #b185db;
 $accent-8: #bb8fe5;
 $accent-9: #8dc776;
 
-$primary-accent: $accent-4;
-$secondary-accent: $accent-9;
+$primary-accent: $accent-2;
+$secondary-accent: $accent-3;
 
 $foreground-color: #c5c8c9;
 
